apps/cluster-based/h2o-demo/octant.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: admin
spec: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: octant-dashboard
  namespace: admin
  labels:
    app.kubernetes.io/name: octant
    app.kubernetes.io/instance: octant-dashboard
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: octant
    app.kubernetes.io/instance: octant-dashboard
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octant-dashboard
  namespace: admin
  labels:
    app.kubernetes.io/name: octant
    app.kubernetes.io/instance: octant-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: octant
      app.kubernetes.io/instance: octant-dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: octant
        app.kubernetes.io/instance: octant-dashboard
    spec:
      serviceAccountName: octant-dev
      securityContext:
        fsGroup: 2000
      initContainers: null
      containers:
      - name: octant
        securityContext:
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
        image: harbor.mgt.mytanzu.org/tools/octant-dashboard:v0.25.1
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        volumeMounts:
        - name: tmp-mount
          mountPath: /tmp
        - name: plugins-mount
          mountPath: /home/octant/.config/octant/plugins/
        resources: {}
      volumes:
      - name: tmp-mount
        emptyDir: {}
      - name: plugins-mount
        emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: octant-auth-proxy
  name: octant-auth-proxy
  namespace: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      name: octant-auth-proxy
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: octant-auth-proxy
    spec:
      containers:
      - args:
        - --provider=oidc
        - --client-id=admin-octant
        - --client-secret=secretvalue
        - --oidc-issuer-url=https://dex.apps.h2o-4-9583.h2o.vmware.com
        - --cookie-secret=bm90LWdvb2Qtc2VjcmV0Cg==
        - --cookie-refresh=2m
        - --upstream=http://octant-dashboard:8000/
        - --http-address=0.0.0.0:3000
        - --email-domain="*"
        - --pass-basic-auth=false
        - --pass-access-token=true
        - --pass-authorization-header=true
        - --proxy-prefix=/oauth2
        - --ssl-insecure-skip-verify
        image: harbor.mgt.mytanzu.org/tools/oauth2-proxy:7.2.1
        imagePullPolicy: IfNotPresent
        name: octant-auth-proxy
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: octant-auth-proxy
  name: octant-auth-proxy
  namespace: admin
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    name: octant-auth-proxy
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: octant-oauth
  namespace: admin
spec:
  routes:
  - conditions:
    - prefix: /
    enableWebsockets: true
    services:
    - name: octant-auth-proxy
      port: 3000
  virtualhost:
    fqdn: admin-octant.apps.h2o-4-9583.h2o.vmware.com
    tls:
      secretName: octant-oauth-tls
